--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PUT-YOUR-PACKAGE-NAME-HERE",
+  "name": "npm-package-skeleton",
   "version": "0.0.0",
   "description": "PUT-YOUR-PACKAGE-DESCRIPTION-HERE",
   "format": "es6",
