--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "npm-package-skeleton",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "PUT-YOUR-PACKAGE-DESCRIPTION-HERE",
   "format": "es6",
   "main": "index.js",
@@ -17,22 +17,17 @@
     "build-amd": "./.scripts/build-amd.sh",
     "build-global": "./.scripts/build-global.sh"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "browserify": "^12.0.0",
     "babelify": "^7.0.0",
-
     "webpack": "^1.12.1",
     "regenerator": "^0.8.0",
-
     "babel-cli": "^6.0.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-polyfill": "^6.0.0",
-
     "babel-preset-react": "^6.0.0",
-
     "babel-plugin-transform-es2015-arrow-functions": "^6.0.0",
     "babel-plugin-transform-es2015-block-scoped-functions": "^6.0.0",
     "babel-plugin-transform-es2015-block-scoping": "^6.0.0",
@@ -51,11 +46,8 @@
     "babel-plugin-transform-es2015-typeof-symbol": "^6.0.0",
     "babel-plugin-transform-es2015-unicode-regex": "^6.0.0",
     "babel-plugin-transform-regenerator": "^6.0.0",
-
     "babel-plugin-transform-async-to-generator": "^6.0.0",
-
     "babel-plugin-transform-es5-property-mutators": "^6.0.0",
-
     "babel-plugin-transform-es2015-modules-commonjs": "^6.0.0",
     "babel-plugin-transform-es2015-modules-amd": "^6.0.0",
     "babel-plugin-transform-es2015-modules-systemjs": "^6.0.0",
