--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,5 @@ node_modules
 # files will be listed when you run `git status`. Optionally, you might like to
 # just check those files into git. It's up to you.
 /dom
+/meteor
 /timers
