--- a/package.json
+++ b/package.json
@@ -9,33 +9,13 @@
   "license": "MIT",
   "homepage": "https://github.com/trusktr/awaitbox",
   "scripts": {
-    "test": "./.scripts/test.sh",
-    "clean": "./.scripts/clean.sh",
-    "prepublish": "npm run build",
-    "build": "./.scripts/build.sh",
-    "build-umd": "./.scripts/build-umd.sh",
-    "build-cjs": "./.scripts/build-cjs.sh",
-    "build-amd": "./.scripts/build-amd.sh",
-    "build-global": "./.scripts/build-global.sh"
+    "test": "./.scripts/test.sh"
   },
   "dependencies": {
-    "babel-runtime": "^6.0.0"
-  },
-  "devDependencies": {
-    "browserify": "^12.0.0",
-    "babelify": "^7.0.0",
-    "webpack": "^1.12.1",
-    "regenerator": "^0.8.0",
-    "babel-cli": "^6.0.0",
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-polyfill": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-0": "^6.0.0",
-    "babel-plugin-transform-runtime": "^6.0.0",
-    "babel-plugin-transform-es2015-modules-amd": "^6.0.0",
-    "babel-plugin-transform-es2015-modules-systemjs": "^6.0.0",
-    "babel-plugin-transform-es2015-modules-umd": "^6.0.0"
+    "@awaitbox/document-ready": "^1.0.7",
+    "@awaitbox/meteor-startup": "^1.0.2",
+    "@awaitbox/sleep": "^1.0.0",
+    "@awaitbox/window-loaded": "^1.0.4"
   },
   "jspm": {
     "registry": "jspm",
@@ -59,11 +39,12 @@
   "keywords": [
     "async",
     "async-await",
-    "async/await",
-    "async functions",
+    "async-functions",
     "await",
     "asynchronous",
-    "utilities"
+    "utilities",
+    "promise",
+    "promise-library"
   ],
   "author": "Joseph Orbegoso Pea <joe@trusktr.io>"
 }
